# telegram-digest-bot

./: .env.example  .gitignore  ARCHITECTURE.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  bot.py  chatid_bul.py  i18n.py  ozet.py  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
deploy/: com.telegram-digest.plist.example
