[project]
name = "telegram-ozet"
version = "0.1.0"
description = "Self-hosted Telegram bot that summarizes unread group/forum messages with AI (multilingual)."
readme = "README.md"
requires-python = ">=3.13"
license = "MIT"
dependencies = [
    "httpx>=0.28.1",
    "python-dotenv>=1.2.2",
    "python-telegram-bot[job-queue]>=22.8",
    "telethon>=1.44.0",
]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I"]  # pycodestyle, pyflakes, warnings, import-order
ignore = ["E501"]              # uzun çeviri/prompt dizgeleri için satır uzunluğunu zorlama
